--- a/src/App.scss
+++ b/src/App.scss
@@ -9,9 +9,25 @@
     transform: translate(-50%,-50%);
     z-index: -1;
     opacity: 0.1;
+    max-width: 100vw;
 }
 
 table {
     margin: 10px;
     width: calc( 100% - 20px ) !important;
+}
+
+td:nth-child(2) {
+    width: 100%;
+}
+
+.badge-dark {
+    cursor: pointer;
+}
+
+@media ( max-device-width: 350px ){
+    table {
+        margin: unset;
+        width: 100% !important;
+    }
 }
