--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 
 .form-control {
-    background-color: rgba(255, 255, 255, 0.2) !important;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .logo {
@@ -12,9 +12,9 @@
     max-width: 100vw;
 }
 
-table {
+.table {
     margin: 10px;
-    width: calc( 100% - 20px ) !important;
+    width: calc( 100% - 20px );
 }
 
 td:nth-child(2) {
@@ -26,8 +26,8 @@ td:nth-child(2) {
 }
 
 @media ( max-device-width: 350px ){
-    table {
+    .table {
         margin: unset;
-        width: 100% !important;
+        width: 100%;
     }
 }
